# hackathon

./: CLAUDE.md  DEPLOY.md  DOMAINS.md  HACKATHON_FOR_MOM.md  HACKATHON_PLAN.md  PRD-MASTER-INTAKE.md  PRD.md  PRdD.md  REMOTION_VIDEO_PLAN.md  REMOTION_VIDEO_PRD.md  privacy-wallet-tools-software-map-integration-matrix.md  teamwork.md
TIER1_PRIORITY/: COMPLETION_REPORT.md  DEPLOYMENT_CHECKLIST.md
TIER1_PRIORITY/billpayx.com/: .gitignore  LICENSE  PRD.md  README.md  SUBMISSION.md  jest.config.js  package.json  tsconfig.json
TIER1_PRIORITY/bytes.zip/: PRD.md  package.json
TIER1_PRIORITY/choom.chat/: .gitignore  PRD.md  README.md  SUBMISSION.md  deploy.sh  index.html  jest.config.js  package.json  tsconfig.json
TIER1_PRIORITY/cli-gitnpm/: PRD.md  README.md  package.json
TIER1_PRIORITY/dasr-marketplace/: PRD.md  README.md  package.json
TIER1_PRIORITY/deidentify.ai/: README.md  package.json
TIER1_PRIORITY/lnk.zip/: PRD.md  README.md  package.json
TIER1_PRIORITY/matrix-privacy/: PRD.md  README.md  package.json
TIER1_PRIORITY/priv.pass.xyz/: PRD.md  README.md  package.json
TIER1_PRIORITY/privacy-sdk/: COMPLETION_REPORT.md  (+2 more)
TIER2_DEVELOPMENT/: COMPLETION_REPORT.md  helix
TIER2_DEVELOPMENT/helix-core/: Cargo.toml
TIER2_DEVELOPMENT/helix-core/src/: kyber.rs  lib.rs  m
TIER2_DEVELOPMENT/vpn-daemon/: Cargo.toml  README.md
TIER2_DEVELOPMENT/vpn-daemon/src/: key_rotation.rs  kyber.rs  lib.rs  main.rs  pq_handshake.rs
remotion-videos/: package-lock.json  package.json  tsconfig.json
team-based-prds/: FINAL-HACKATHON-MATRIX.md  README.md  navigate.sh
(+145 files in other folders)
