[package]
name = "helix-core"
version = "0.1.0"
edition = "2021"
description = "Helix Core - Kyber KEM for post-quantum messaging"
authors = ["TheGit Network <dev@thegit.network>"]
license = "MIT"

[dependencies]
rand = "0.8"
sha2 = "0.10"
chacha20poly1305 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
tokio-test = "0.4"