[package]
name = "vpn-daemon"
version = "0.1.0"
edition = "2021"
description = "Post-Quantum VPN Daemon with Kyber-768 + WireGuard hybrid encryption"
authors = ["TheGit Network <dev@thegit.network>"]
license = "MIT"
repository = "https://github.com/thegit.network/vpn-daemon"

[dependencies]
tokio = { version = "1.35", features = ["full", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
rand = "0.8"
sha2 = "0.10"
chacha20poly1305 = "0.10"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
dashmap = "5.5"
arc-swap = "1.6"
bytes = "1.5"

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1